# mj_environment

./: .gitignore  ISSUE_TEMPLATES.md  LICENSE  MUJOCO_LOG.TXT  README.md  environment.py  main.py  object_manager.py  pyproject.toml  run_demo.sh  scene.xml
.github/workflows/: ci.yml
data/: scene.xml  scene_config.yaml
data/objects/bowl/: meta.yaml  model.xml
data/objects/cup/: meta.yaml  model.xml
data/objects/fork/: meta.yaml  model.xml
data/objects/knife/: meta.yaml  model.xml
data/objects/mug/: meta.yaml  model.xml
data/objects/plate/: meta.yaml  model.xml
data/objects/spoon/: meta.yaml  model.xml
demos/: asset_manager_demo.py  dynamic_kitchen_demo.py  object_update_demo.py  parallel_planning_demo.py  perception_update_demo.py
mj_environment/: __init__.py  asset_manager.py  constants.py  environment.py  mujoco_helpers.py  object_registry.py  quaternion.py  simulation.py  state_io.py  tracker.py  types.py
objects/: household.xml
src/mj_environment/: __init__.py  environment.py  exceptions.py  object_registry.py  tracker.py
tests/: test_asset_manager_integrity.py  test_critical_fixes.py  test_environment_init.py  test_exceptions.py  test_fork.py  test_object_lifecycle.py  test_robustness.py  test_state_clone_restore.py  test_state_management.py  test_tracker.py
