[project]
name = "mj_environment"
version = "0.1.0"
description = "A Python module for managing dynamic objects and full environments in MuJoCo"
readme = "README.md"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "Siddhartha Srinivasa", email = "siddh@cs.washington.edu"}
]
maintainers = [
    {name = "Siddhartha Srinivasa", email = "siddh@cs.washington.edu"}
]
requires-python = ">=3.9"
dependencies = [
    "mujoco>=2.1.0",
    "numpy"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["mj_environment"]
